# stm32f405rgt6_detect_velocity

./: .mxproject  Makefile  README.md  stm32f405rgt6_detect_velocity.ioc  方向与deltDAC关系.md
Core/Inc/: AD9520.h  ad9520_function.h  main.h  mainLoop.h  max5307.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: ad9520_function copy.c.bak  ad9520_function.c  main.c  mainLoop.c  max5307.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
EWARM/: Project.eww  stm32f405rgt6_detect_velocity.dep  stm32f405rgt6_detect_velocity.ewd  stm32f405rgt6_detect_velocity.ewp
EWARM/settings/: Project.wsdt  stm32f405rgt6_detect_velocity.dnx  stm32f405rgt6_detect_velocity.stm32f405rgt6_detect_velocity.cspy.bat  stm32f405rgt6_detect_velocity.stm32f405rgt6_detect_velocity.cspy.ps1  stm32f405rgt6_detect_velocity.stm32f405rgt6_detect_velocity.driver.xcl  stm32f405rgt6_detect_velocity.stm32f405rgt6_detect_velocity.general.xcl
MDK-ARM/: startup_stm32f405xx.lst  stm32f405rgt6_detect_velocity.uvguix.lpf_3  stm32f405rgt6_detect_velocity.uvoptx  stm32f405rgt6_detect_velocity.uvprojx
MDK-ARM/stm32f405rgt6_detect_velocity/: ad9520_function.crf  ad9520_function.d  main.crf  main.d  mainloop.crf  mainloop.d  max5307.crf  max5307.d  startup_stm32f405xx.d  stm32f405rgt6_detect_velocity.axf  stm32f405rgt6_detect_velocity.build_log.htm  (+55 more)
cankao_xulaoshi/: novena_scope_ad9520.cpp  novena_scope_ad9520.h  time_capture_demo.c  time_mease_fre_dma  tuoluo_test.c
hostTools/: plt_adc.py  print_AD_DA.py  test_MEAN_var_plt.py
hostTools/plt_bindC++/: CMakeLists.txt  plt_adc_c++.py
hostTools/plt_bindC++/src/: main.cpp
(+5 files in other folders)
